--- a/webMetics/appsettings.json
+++ b/webMetics/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=aspnet-webMetics-2793fa9b-a054-47cf-8443-da5f8bca4169;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=METICS;User ID=sa;Password=*******;Encrypt=False;Trust Server Certificate=True"
   },
   "Logging": {
     "LogLevel": {
