--- a/webMetics/webMetics.csproj
+++ b/webMetics/webMetics.csproj
@@ -68,6 +68,8 @@
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="7.1.3" />
     <PackageReference Include="HtmlTextWriter" Version="3.0.1" />
+    <PackageReference Include="itext7" Version="8.0.4" />
+    <PackageReference Include="itext7.bouncy-castle-adapter" Version="8.0.4" />
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.4" />
