--- a/webMetics/webMetics.csproj
+++ b/webMetics/webMetics.csproj
@@ -39,10 +39,10 @@
     <None Include="Views\Home\Index.cshtml" />
     <None Include="Views\Inscripcion\ExportarParticipantes.cshtml" />
     <None Include="Views\Inscripcion\Inscribir.cshtml" />
-    <None Include="Views\Login\Registrarse.cshtml" />
-    <None Include="Views\Login\GestionarContrasena.cshtml" />
-    <None Include="Views\Login\Login.cshtml" />
-    <None Include="Views\Login\ParticipanteRegistrado.cshtml" />
+    <None Include="Views\Usuario\Registrarse.cshtml" />
+    <None Include="Views\Usuario\GestionarContrasena.cshtml" />
+    <None Include="Views\Usuario\IniciarSesion.cshtml" />
+    <None Include="Views\Usuario\ParticipanteRegistrado.cshtml" />
     <None Include="Views\Participante\EditarParticipante.cshtml" />
     <None Include="Views\Participante\CrearUsuario.cshtml" />
     <None Include="Views\Participante\ListaParticipantes.cshtml" />
