--- a/webMetics/webMetics.csproj
+++ b/webMetics/webMetics.csproj
@@ -32,7 +32,7 @@
     <None Include="Views\Categoria\CrearCategoria.cshtml" />
     <None Include="Views\Categoria\EditarCategoria.cshtml" />
     <None Include="Views\Categoria\ListaCategorias.cshtml" />
-    <None Include="Views\Grupo\AgregarGrupo.cshtml" />
+    <None Include="Views\Grupo\CrearGrupo.cshtml" />
     <None Include="Views\Grupo\EditarAdjunto.cshtml" />
     <None Include="Views\Grupo\EditarGrupo.cshtml" />
     <None Include="Views\Grupo\ListaGruposDisponibles.cshtml" />
@@ -65,7 +65,6 @@
     <None Include="Views\_ViewImports.cshtml" />
     <None Include="Views\_ViewStart.cshtml" />
     <None Include="wwwroot\css\site.css" />
-    <None Include="wwwroot\images\avatar.png" />
     <None Include="wwwroot\images\fondo_login.jpg" />
     <None Include="wwwroot\images\logoMETICS.png" />
     <None Include="wwwroot\images\logos.png" />
