Se habilita la configuración de la contraseña de email.

--- a/webMetics/appsettings.json
+++ b/webMetics/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost;Initial Catalog=METICS;User ID=sa;Password=*******;Encrypt=False;Trust Server Certificate=True"
   },
+  "EmailSettings": {
+    "SMTPPassword": "<Your_Email_Password>"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
