Se puede habilitar y deshabilitar el correo desde la aplicación (administrador).

--- a/webMetics/appsettings.json
+++ b/webMetics/appsettings.json
@@ -1,9 +1,14 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost;Initial Catalog=METICS;User ID=sa;Password=*******;Encrypt=False;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=DESKTOP-LP8L9QR\\SQLEXPRESS;Initial Catalog=metics2;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
   },
   "EmailSettings": {
-    "SMTPPassword": "<Your_Email_Password>"
+    "IsEnabled": false,
+    "SmtpServer": "smtp.ucr.ac.cr",
+    "Port": 587,
+    "Username": "COMPETENCIAS DIGITALES",
+    "Password": "4r7QaF4.NhnJkH!__",
+    "From": "COMPETENCIAS.DIGITALES@ucr.ac.cr"
   },
   "Logging": {
     "LogLevel": {
