Corrección connection string.

--- a/webMetics/appsettings.json
+++ b/webMetics/appsettings.json
@@ -1,13 +1,13 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-LP8L9QR\\SQLEXPRESS;Initial Catalog=metics2;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=METICS;User ID=sa;Password=*******;Encrypt=False;Trust Server Certificate=True"
   },
   "EmailSettings": {
     "IsEnabled": false,
     "SmtpServer": "smtp.ucr.ac.cr",
     "Port": 587,
     "Username": "COMPETENCIAS DIGITALES",
-    "Password": "<Your_Password>",
+    "Password": "4r7QaF4.NhnJkH!",
     "From": "COMPETENCIAS.DIGITALES@ucr.ac.cr"
   },
   "Logging": {
