Corrección connection string.

--- a/webMetics/appsettings.json
+++ b/webMetics/appsettings.json
@@ -7,7 +7,7 @@
     "SmtpServer": "smtp.ucr.ac.cr",
     "Port": 587,
     "Username": "COMPETENCIAS DIGITALES",
-    "Password": "4r7QaF4.NhnJkH!",
+    "Password": "<Your_Email_Password>",
     "From": "COMPETENCIAS.DIGITALES@ucr.ac.cr"
   },
   "Logging": {
