--- a/webMetics/webMetics.csproj
+++ b/webMetics/webMetics.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Duende.IdentityServer" Version="7.2.0" />
     <PackageReference Include="EPPlus" Version="7.1.3" />
     <PackageReference Include="HtmlTextWriter" Version="3.0.1" />
     <PackageReference Include="itext7" Version="8.0.4" />
